[tool.poetry]
name = "poetry-sample"
version = "0.1.0"
description = ""
authors = ["sayominami <op.blackpearl.328@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
